lastest complete for transfer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.biraj.book">
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/book"
@@ -10,12 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name">
-
-        </activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".RegisterActivity"
             android:label="@string/title_activity_fullscreen" />
@@ -33,13 +32,23 @@
         </activity>
         <activity
             android:name=".BookDisplayActivity"
-            android:label="@string/title_activity_book_display">
+            android:label="@string/title_activity_book_display"
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            </activity>
+        <activity android:name=".BookDetailActivity" />
+        <activity
+            android:name=".UserViewActivity"
+            android:label="UserVeiwActivity">
+
+            <!-- android:theme="@style/AppTheme.NoActionBar"> -->
         </activity>
+        <activity android:name=".AddBookActivity" />
+        <activity android:name=".DashBoardActivity"></activity>
     </application>
 
 </manifest>
